--- a/scheduler/pmc-processor-task/build.gradle
+++ b/scheduler/pmc-processor-task/build.gradle
@@ -5,7 +5,7 @@ import static TestDependencies.BaseTestCompileDependencies
 import static TestDependencies.BaseTestRuntimeDependencies
 
 plugins {
-    id "org.jetbrains.kotlin.plugin.spring" version "1.3.10"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.3.20"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "org.springframework.boot" version "2.1.1.RELEASE"
 }
@@ -19,6 +19,7 @@ dependencies {
     implementation(SpringBootStarterConfigProcessor)
 
     implementation(KMongoCoroutine)
+    implementation(Coroutines)
     implementation(KotlinLogging)
 
     implementation(Retrofit2)
