--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include("commons:commons-bio")
 include("commons:commons-http")
 include("commons:commons-serialization")
 include("commons:commons-test")
+include("commons:commons-transpiler")
 
 include("bio-webclient")
 include("infrastructure")
