--- a/deteck-config.yml
+++ b/deteck-config.yml
@@ -26,7 +26,7 @@ test-pattern:
     - 'InstanceOfCheckForException'
 
 build:
-  maxIssues: 20
+  maxIssues: 0
   weights:
 
 processors:
@@ -402,7 +402,7 @@ style:
     active: false
     includeLineWrapping: false
   ForbiddenComment:
-    active: true
+    active: false
     values: 'TODO:,FIXME:,STOPSHIP:'
   ForbiddenImport:
     active: false
