--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include("commons:commons-transpiler")
 
 include("bio-webclient")
 include("infrastructure")
+include("client:bio-commandline")
 
 include("submission:submitter")
 include("submission:submission-webapp")
