--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,9 @@ include("commons:commons-serialization")
 include("commons:commons-test")
 include("commons:commons-transpiler")
 
-include("bio-webclient")
+include("client:bio-webclient")
+include("client:bio-commandline")
+
 include("infrastructure")
 
 include("submission:submitter")
